# GAME-ENGINE-ARCHITECTURE

./: CMakeLists.txt  debug.sh  gmon.out  readme.md  run.sh
src/: main.cpp
src/DemoGame/: Colliders.h  DemoGame.h  Player.h  Render.cpp  Render.h
src/Engine/: Components.h  Entity.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Systems.h
